--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
+
 language: python
-python:
-    - "3.6"
-install: python setup.py install
 
 python:
     - "3.6"
@@ -13,9 +11,9 @@ install:
     - conda config --set always_yes yes --set changeps1 no
     - conda update -q conda
     - conda info -a
-    - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
-    - source activate test-environment
-    - conda install pytorch torchvision -c pytorch
-    - python setup.py install
+    - make install
 
-script: make test
+script:
+    - source activate beer
+    - make test
+
