--- a/tests/models/vae_feedforward_gmm_diag_shared.yml
+++ b/tests/models/vae_feedforward_gmm_diag_shared.yml
@@ -5,17 +5,28 @@ normal_model:
   prior_strength: 1.
   noise_std: 0
 encoder:
-  type: FeedForwardEncoder
-  dim_out: 2
-  dim_hlayer: 10
-  n_layer: 2
-  non_linearity: tanh
+  blocks:
+  - residual_connection: 'none'
+    structure:
+    - Linear:in_features=<feadim>,out_features=10
+    - Tanh
+  - residual_connection: 'identity'
+    structure:
+    - Linear:in_features=10,out_features=20
+    - Tanh
+    - Linear:in_features=20,out_features=10
+  dim_input_normal_layer: 10
+  dim_output_normal_layer: 5
   covariance: isotropic
 decoder:
-  type: FeedForwardDecoder
-  dim_hlayer: 12
-  n_layer: 2
-  non_linearity: tanh
+  blocks:
+  - residual_connection: 'identity'
+    structure:
+    - Linear:in_features=5,out_features=10
+    - Tanh
+    - Linear:in_features=10,out_features=5
+  dim_input_normal_layer: 5
+  dim_output_normal_layer: <feadim>
 latent_model:
   type: Mixture
   prior_strength: 1.
