--- a/recipes/emnist/conf/vaeplda.yml
+++ b/recipes/emnist/conf/vaeplda.yml
@@ -3,24 +3,22 @@ encoder:
   blocks:
   - residual_connection: 'none'
     structure:
-    - Linear:in_features=<feadim>,out_features=10
+    - Linear:in_features=<feadim>,out_features=100
     - Tanh
-  - residual_connection: 'identity'
-    structure:
-    - Linear:in_features=10,out_features=20
+    - Linear:in_features=100,out_features=100
     - Tanh
-    - Linear:in_features=20,out_features=10
-  dim_input_normal_layer: 10
-  dim_output_normal_layer: 5
+  dim_input_normal_layer: 100
+  dim_output_normal_layer: 30
   covariance: isotropic
 decoder:
   blocks:
-  - residual_connection: 'identity'
+  - residual_connection: 'none'
     structure:
-    - Linear:in_features=5,out_features=10
+    - Linear:in_features=30,out_features=100
     - Tanh
-    - Linear:in_features=10,out_features=5
-  dim_input_normal_layer: 5
+    - Linear:in_features=100,out_features=100
+    - Tanh
+  dim_input_normal_layer: 100
   dim_output_normal_layer: <feadim>
 latent_model:
   type: Mixture
@@ -28,7 +26,7 @@ latent_model:
   components:
     type: PLDASet
     size: 26
-    dim_noise_subspace: 1
-    dim_class_subspace: 1
+    dim_noise_subspace: 10
+    dim_class_subspace: 10
     prior_strength: 1.
     noise_std: 0.1
