--- a/recipes/emnist/conf/vae.yml
+++ b/recipes/emnist/conf/vae.yml
@@ -1,39 +1,28 @@
-type: NonLinearSubspaceModel
-normal_model:
-  type: Normal
-  covariance: isotropic
-  prior_strength: 1.
-  noise_std: 0
+type: BernoulliNonLinearSubspaceModel
 encoder:
   blocks:
   - residual_connection: 'none'
     structure:
-    - Linear:in_features=<feadim>,out_features=10
+    - Linear:in_features=<feadim>,out_features=200
     - Tanh
-  - residual_connection: 'identity'
-    structure:
-    - Linear:in_features=10,out_features=20
+    - Linear:in_features=200,out_features=200
     - Tanh
-    - Linear:in_features=20,out_features=10
-  dim_input_normal_layer: 10
-  dim_output_normal_layer: 5
+  dim_input_normal_layer: 200
+  dim_output_normal_layer: 30
   covariance: isotropic
 decoder:
   blocks:
-  - residual_connection: 'identity'
+  - residual_connection: 'none'
     structure:
-    - Linear:in_features=5,out_features=10
+    - Linear:in_features=30,out_features=200
     - Tanh
-    - Linear:in_features=10,out_features=5
-  dim_input_normal_layer: 5
+    - Linear:in_features=200,out_features=200
+    - Tanh
+  dim_input_normal_layer: 200
   dim_output_normal_layer: <feadim>
 latent_model:
-  type: Mixture
+  type:  Normal
+  covariance: diagonal
   prior_strength: 1.
-  components:
-    type: PLDASet
-    size: 10
-    dim_noise_subspace: 1
-    dim_class_subspace: 1
-    prior_strength: 1.
-    noise_std: 0.1
+  noise_std: 0.
+
