--- a/tests/models/vae_feedforward_gmm_diag.yml
+++ b/tests/models/vae_feedforward_gmm_diag.yml
@@ -8,13 +8,13 @@ encoder:
   blocks:
   - residual_connection: 'none'
     structure:
-    - Linear:in_features=<feadim>,out_features=10
+    - Linear:in_features=<feadim>;out_features=10
     - Tanh
   - residual_connection: 'identity'
     structure:
-    - Linear:in_features=10,out_features=20
+    - Linear:in_features=10;out_features=20
     - Tanh
-    - Linear:in_features=20,out_features=10
+    - Linear:in_features=20;out_features=10
   dim_input_normal_layer: 10
   dim_output_normal_layer: 5
   covariance: isotropic
@@ -22,9 +22,9 @@ decoder:
   blocks:
   - residual_connection: 'identity'
     structure:
-    - Linear:in_features=5,out_features=10
+    - Linear:in_features=5;out_features=10
     - Tanh
-    - Linear:in_features=10,out_features=5
+    - Linear:in_features=10;out_features=5
   dim_input_model_layer: 5
   dim_output_model_layer: <feadim>
 latent_model:
