--- a/recipes/emnist/conf/vae_beta_ldim20_plda.yml
+++ b/recipes/emnist/conf/vae_beta_ldim20_plda.yml
@@ -21,8 +21,13 @@ decoder:
   dim_input_model_layer: 200
   dim_output_model_layer: <feadim>
 latent_model:
-  type:  Normal
-  covariance: diagonal
+  type: Mixture
   prior_strength: 1.
-  noise_std: 0.
+  components:
+    type: PLDASet
+    size: 10
+    dim_noise_subspace: 9
+    dim_class_subspace: 9
+    prior_strength: 1.
+    noise_std: 0.1
 
