--- a/recipes/emnist/conf/vae_beta_ldim5_plda.yml
+++ b/recipes/emnist/conf/vae_beta_ldim5_plda.yml
@@ -8,21 +8,26 @@ encoder:
     - Linear:in_features=200,out_features=200
     - Tanh
   dim_input_normal_layer: 200
-  dim_output_normal_layer: 20
+  dim_output_normal_layer: 5
   covariance: isotropic
 decoder:
   blocks:
   - residual_connection: 'none'
     structure:
-    - Linear:in_features=20,out_features=200
+    - Linear:in_features=5,out_features=200
     - Tanh
     - Linear:in_features=200,out_features=200
     - Tanh
   dim_input_model_layer: 200
   dim_output_model_layer: <feadim>
 latent_model:
-  type:  Normal
-  covariance: diagonal
+  type: Mixture
   prior_strength: 1.
-  noise_std: 0.
+  components:
+    type: PLDASet
+    size: 10
+    dim_noise_subspace: 5
+    dim_class_subspace: 5
+    prior_strength: 1.
+    noise_std: 0.1
 
