Create VAE working again.

--- a/tests/models/vae_feedforward_ppca.yml
+++ b/tests/models/vae_feedforward_ppca.yml
@@ -5,28 +5,33 @@ normal_model:
   prior_strength: 1.
   noise_std: 0
 encoder:
-  blocks:
-  - residual_connection: 'none'
-    structure:
+  nnet_structure:
+  - residual: false
+    block_structure:
     - Linear:in_features=<feadim>;out_features=10
     - Tanh
-  - residual_connection: 'identity'
-    structure:
+  - residual: true
+    block_structure:
     - Linear:in_features=10;out_features=20
     - Tanh
     - Linear:in_features=20;out_features=10
-  dim_input_normal_layer: 10
-  dim_output_normal_layer: 5
-  covariance: isotropic
+  prob_layer:
+    type: NormalLayer
+    covariance: isotropic
+    dim_in: 10
+    dim_out: 5
 decoder:
-  blocks:
-  - residual_connection: 'identity'
-    structure:
+  nnet_structure:
+  - residual: true
+    block_structure:
     - Linear:in_features=5;out_features=10
     - Tanh
     - Linear:in_features=10;out_features=5
-  dim_input_model_layer: 5
-  dim_output_model_layer: <feadim>
+  prob_layer:
+    type: NormalLayer
+    covariance: unity
+    dim_in: 5
+    dim_out: <feadim>
 latent_model:
   type: PPCA
   dim_subspace: 4
