--- a/tests/models/bernoulli_vae_normal.yml
+++ b/tests/models/bernoulli_vae_normal.yml
@@ -1,32 +1,33 @@
-type: BernoulliNonLinearSubspaceModel
-normal_model:
-  type: Normal
-  covariance: isotropic
-  prior_strength: 1.
-  noise_std: 0
+type: VAE
+llh_type: bernoulli
 encoder:
-  blocks:
-  - residual_connection: 'none'
-    structure:
+  nnet_structure:
+  - residual: false
+    block_structure:
     - Linear:in_features=<feadim>;out_features=10
     - Tanh
-  - residual_connection: 'identity'
-    structure:
+  - residual: 'identity'
+    block_structure:
     - Linear:in_features=10;out_features=20
     - Tanh
     - Linear:in_features=20;out_features=10
-  dim_input_normal_layer: 10
-  dim_output_normal_layer: 5
-  covariance: isotropic
+  prob_layer:
+    type: NormalLayer
+    covariance: isotropic
+    dim_in: 10
+    dim_out: 5
 decoder:
-  blocks:
-  - residual_connection: 'identity'
-    structure:
+  nnet_structure:
+  - residual: true
+    block_structure:
     - Linear:in_features=5;out_features=10
     - Tanh
     - Linear:in_features=10;out_features=5
-  dim_input_model_layer: 5
-  dim_output_model_layer: <feadim>
+  prob_layer:
+    type: NormalLayer
+    covariance: unity
+    dim_in: 5
+    dim_out: <feadim>
 latent_model:
   type: Normal
   covariance: diagonal
