Add: arbitrary residual connection

--- a/tests/models/nlsubspace_normal.yml
+++ b/tests/models/nlsubspace_normal.yml
@@ -15,11 +15,10 @@ normalizing_flow:
     width: 20
 encoder:
   nnet_structure:
-  - residual: false
-    block_structure:
+  - block_structure:
     - Linear:in_features=<feadim>;out_features=10
     - Tanh
-  - residual: true
+  - residual: IdentityLayer
     block_structure:
     - Linear:in_features=10;out_features=20
     - Tanh
@@ -32,14 +31,14 @@ encoder:
     dim_out: 5
 decoder:
   nnet_structure:
-  - residual: true
+  - residual: IdentityLayer
     block_structure:
     - Linear:in_features=5;out_features=10
     - Tanh
     - Linear:in_features=10;out_features=5
   prob_layer:
     type: NormalLayer
-    covariance: unity
+    covariance: identity
     dim_in: 5
     dim_out: <feadim>
 latent_model:
