--- a/recipes/timit_v2/conf/vae_hmm/encoder.yml
+++ b/recipes/timit_v2/conf/vae_hmm/encoder.yml
@@ -13,9 +13,9 @@ nnet_structure:
 # a residual connection (avg pooling to match the down sampling).
 - block_structure:
   - Conv2d:in_channels=1;out_channels=128;kernel_size=(11,{dim_in});padding=(5,0);stride=2
-  - Softplus
+  - ELU
   - Conv2d:in_channels=128;out_channels=128;kernel_size=(11,1);padding=(5,0)
-  - Softplus
+  - ELU
   residual: AvgPool2d:kernel_size=(11,39);stride=2;padding=(5,0)
 
 # After the convolutive block, reshape the data so to be processed
@@ -28,7 +28,7 @@ nnet_structure:
 # residual connection.
 - block_structure:
   - Linear:in_features=128;out_features=512
-  - Softplus
+  - ELU
   - Linear:in_features=512;out_features=128
   residual: IdentityLayer
 
