--- a/recipes/timit_v2/conf/mfcc.yml
+++ b/recipes/timit_v2/conf/mfcc.yml
@@ -1,3 +1,6 @@
+# Configuration to get standard MFCC features.
+
+
 # Raw signal pre-processing.
 srate: 16000        # sampling rate of the signal (Hz)
 preemph: 0.97       # Pre-emphasis filter coefficient.
@@ -5,20 +8,22 @@ window_len: 0.025   # size of the window for the FFT analysis (second)
 framerate: 0.01     # Frame rate of the features (second)
 
 # Filterbank.
+apply_fbank: yes    # Set to 'no' to keep just the (log) magnitude spectrum.
 nfilters: 26        # Number of filters in the filterbank.
-cutoff_hfreq: 8000  # high cut-off frequency of the filterbank (Hz)
+cutoff_hfreq: 7600  # high cut-off frequency of the filterbank (Hz)
 cutoff_lfreq: 20    # low cut-off frequency of the filterbank (Hz)
                     # center of the filters.
 
 # Deltas
+apply_deltas: yes    # Set to 'yes' to stack derivatives to the signal.
 delta_order: 2      # Number of deltas added to the features (0 means
                     # no deltas).
 delta_winlen: 2     # Window length to compute the delta features.
 
 # MFCC features.
-apply_dct: yes      # Set to 'yes' to get MFCC features.
-n_dct_coeff: 13     # Number of DCT coefficent to keep (if appy_dct: yes).
-lifter_coeff: 22    # Liftering coefficient (if appy_dct: yes).
+apply_dct: yes      # Set to 'yes' to get the MFCC features.
+n_dct_coeff: 13     # Number of DCT coefficent to keep.
+lifter_coeff: 22    # Liftering coefficient.
 
 # Post-processing.
 utt_mnorm: yes      # Per-utterance mean normalization.
