--- a/recipes/timit_v2/conf/logspec.yml
+++ b/recipes/timit_v2/conf/logspec.yml
@@ -3,11 +3,11 @@
 
 # Raw signal pre-processing.
 srate: 16000
-preemph: 0.97
+preemph: 0.0
 window_len: 0.025
 framerate: 0.01
 apply_fbank: no
 apply_deltas: no
 apply_dct: no
-utt_mnorm: yes
+utt_mnorm: no
 
