--- a/recipes/clustering/conf/gmm/gmm.yml
+++ b/recipes/clustering/conf/gmm/gmm.yml
@@ -1,5 +1,6 @@
-size: {size}
+size: 512
+concentration: 1.
 prior_strength: 1.
-noise_std: 0.1
-cov_type: full
-shared_cov: true
+noise_std: 1
+cov_type: diagonal
+shared_cov: no
