--- a/recipes/aud/conf/hmm.yml
+++ b/recipes/aud/conf/hmm.yml
@@ -1,7 +1,35 @@
-# Speech units (e.g. phones).
-- group_name: au
-  n_units: 100
-  n_normal_per_state: 4
+# HMM structure for speech and non-speech units.
+
+- group_name: non-speech-unit
+  n_normal_per_state: 10
+  prior_strength: 1.
+  noise_std: 0.1
+  cov_type: diagonal
+  shared_cov: no
+  topology:
+  - {start_id: 0, end_id: 1, trans_prob: 1.0}
+  - {start_id: 1, end_id: 1, trans_prob: 0.25}
+  - {start_id: 1, end_id: 2, trans_prob: 0.25}
+  - {start_id: 1, end_id: 3, trans_prob: 0.25}
+  - {start_id: 1, end_id: 4, trans_prob: 0.25}
+  - {start_id: 2, end_id: 2, trans_prob: 0.25}
+  - {start_id: 2, end_id: 3, trans_prob: 0.25}
+  - {start_id: 2, end_id: 4, trans_prob: 0.25}
+  - {start_id: 2, end_id: 5, trans_prob: 0.25}
+  - {start_id: 3, end_id: 2, trans_prob: 0.25}
+  - {start_id: 3, end_id: 3, trans_prob: 0.25}
+  - {start_id: 3, end_id: 4, trans_prob: 0.25}
+  - {start_id: 3, end_id: 5, trans_prob: 0.25}
+  - {start_id: 4, end_id: 2, trans_prob: 0.25}
+  - {start_id: 4, end_id: 3, trans_prob: 0.25}
+  - {start_id: 4, end_id: 4, trans_prob: 0.25}
+  - {start_id: 4, end_id: 5, trans_prob: 0.25}
+  - {start_id: 5, end_id: 5, trans_prob: 0.75}
+  - {start_id: 5, end_id: 6, trans_prob: 0.25}
+
+
+- group_name: speech-unit
+  n_normal_per_state: 8
   prior_strength: 1.
   noise_std: 0.1
   cov_type: diagonal
